# TurkishMorpheus

./: .gitignore  README.md  pyproject.toml
src/: bootstrap_dirs.py  run_pipeline.py
src/benchmarker/benchmarks/: classical.py  lm_eval.py  morpheus_evaluator.py  morphscore_eval.py  paper.py  qualitative_eval.py  roundtrip_eval.py  scale_ablation.py  sigmorphon.py  trmmlu_eval.py
src/benchmarker/configs/: configs.yaml  main.yaml
src/benchmarker/helpers/: benchmarker.py  data_preprocessor.py  dataset_analyzer.py  metric_evaluator.py  tokenizer_trainer.py  visualizer.py
src/benchmarker/metrics/: build_morpheme_inventory.py  classical.py  efficiency.py  external_tokenizers.py  extrinsic.py  intrinsic.py  kalbur_validator.py  linguistic_validity.py
src/benchmarker/results/: qualitative_details.csv  qualitative_summary.csv
src/benchmarker/utils/: config_manager.py  logger.py
src/benchmarker/visualization/: embedding_report.py  eval_report.py  plots.py
src/common/: config_manager.py  kalbur.py  logger.py
src/common/configs/: logging.yaml  main.yaml
src/common/providers/: config_provider.py  logger_provider.py
src/configs/: configs.yaml  dataset.yaml
src/helpers/: data_preprocessor.py  dataset_analyzer.py
src/model_development/configs/: logging.yaml  main.yaml
src/model_development/data/: analyzer.py  preprocessor.py  wikipedia_ingest.py
src/model_development/evaluation/: paper_evaluation.py  scale_ablation_compare.py  sigmorphon_eval.py
src/model_development/model/: boundary_detector.py  char_encoder.py  morpheus.py  segment_encoder.py
(+70 files in other folders)
